@@ -4,7 +4,8 @@ Change log for zeit.web
 2.34 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- PERF: Disable `requests` trying to read credentials from `~/.netrc`,
+  saving quite a few superfluous disk accesses
 
 
 2.33 (2015-11-27)
